<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".DSPhongBan">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#19C4DA"
        android:gravity="center"
        android:text="@string/title_dspb"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textColor="#19C4DA"
                android:textStyle="bold"
                android:text="@string/title_mapb"/>
            <EditText
                android:id="@+id/etMaPB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:enabled="false"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:textColor="#19C4DA"
                android:textStyle="bold"
                android:text="@string/title_tenpb"/>
            <EditText
                android:id="@+id/etTenPB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnThem"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_weight=".25"
            android:text="@string/title_them"
            android:textColor="#D5DFD6"
            android:textStyle="bold"
            android:backgroundTint="#19C4DA"/>

        <Button
            android:id="@+id/btnSua"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight=".25"
            android:text="@string/title_sua"
            android:textColor="#D5DFD6"
            android:textStyle="bold"
            android:backgroundTint="#19C4DA"/>


    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThem"
        />
</LinearLayout>